// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Terminal Output Snapshots > deep-cpi — three-level invocation chain 1`] = `
"
  OPEN INSIGHT [CLI v0.1.0]    DEVNET   SLOT: 1500500 
  ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
  │ SIGNATURE: 2vY6J1cR8nW4tK5x...5uZ0cM3qR9eX1tV8   SUCCESS                                                                                                   │
  │                                                                                                                                                     │
  │ TRANSACTION FEE: 0.000100 SOL                                                                                                                              │
  ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ CU EXECUTION COST                                                                                                                                       │
  │                                                                                                                                                    │
  │  CU Consumed:   178.900 CU                                                                                                                                 │
  │  Priority Fee:  no priority fee                                                                                                                            │
  │  Fee:           0 lamports  ·  0.000000000 SOL  ·  USD N/A                                                                                                 │
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ TRANSFER BREAKDOWN                                                                                                                                      │
  │                                                                                                                                                    │
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────┬──────────────┬────────────────────┬──────────────────────────────────────────────┬──────────────┬────────┐
│ From         │ To           │ Amount             │ Token                                        │ USD          │ Spam?  │
├──────────────┼──────────────┼────────────────────┼──────────────────────────────────────────────┼──────────────┼────────┤
│ —            │ Fg6P...PZL7  │ 0,0001             │ SOL                                          │ N/A          │ no     │
└──────────────┴──────────────┴────────────────────┴──────────────────────────────────────────────┴──────────────┴────────┘

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ CPI CALL TREE                                                                                                                                           │
  │                                                                                                                                                    │
  │ ✓ 11111111111111111111111111111111 (0 CU)
  │ └── ✓ TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA (0 CU)
  │     └── ✓ 3PAwBZx5yK3XbXyTAqvH9Y3ontQ3uHa4oWFr95Sk8kGh (0 CU)
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

   ACCOUNT CHANGES
┌────────────────────┬────────────┬───────────────┬────────────────────┐
│ Account            │ Role       │ SOL Δ         │ Token Δ            │
├────────────────────┼────────────┼───────────────┼────────────────────┤
│ 2zoF...e2dS        │ signer     │ -0.000100     │ —                  │
├────────────────────┼────────────┼───────────────┼────────────────────┤
│ Fg6P...PZL7        │ writable   │ +0.000100     │ —                  │
└────────────────────┴────────────┴───────────────┴────────────────────┘

  ╔═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
  ║ ACTIONABLE INSIGHTS                                                                                                                                        ║
  ║                                                                                                                                                    ║
  ║  - CU by node attribution confidence is 0.0% with 0 unmatched CU entries.                                                                                  ║
  ╚═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
"
`;

exports[`Terminal Output Snapshots > failed — custom program error 1`] = `
"
  OPEN INSIGHT [CLI v0.1.0]    DEVNET   SLOT: 1500300 
  ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
  │ SIGNATURE: 8fH3c2LwJ6pZ4dXk...R7vA9cZzX5yJ0wK1   FAILED                                                                                                    │
  │                                                                                                                                                     │
  │ TRANSACTION FEE: 0.000000 SOL                                                                                                                              │
  ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ CU EXECUTION COST                                                                                                                                       │
  │                                                                                                                                                    │
  │  CU Consumed:   56.317 CU                                                                                                                                  │
  │  Priority Fee:  no priority fee                                                                                                                            │
  │  Fee:           0 lamports  ·  0.000000000 SOL  ·  USD N/A                                                                                                 │
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ TRANSFER BREAKDOWN                                                                                                                                      │
  │                                                                                                                                                    │
  │ [ No transfers detected ]                                                                                                                                  │
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ CPI CALL TREE                                                                                                                                           │
  │                                                                                                                                                    │
  │ ✗ 5P1hRzb17urFFM2Eb6ZQDsnsD5qs9g9YnF2AVEv6GDh9 (56.317 CU) [BOTTLENECK][FAILED]
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

   ACCOUNT CHANGES
┌────────────────────┬────────────┬───────────────┬────────────────────┐
│ Account            │ Role       │ SOL Δ         │ Token Δ            │
└────────────────────┴────────────┴───────────────┴────────────────────┘

  ╔═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
  ║ ACTIONABLE INSIGHTS                                                                                                                                        ║
  ║                                                                                                                                                    ║
  ║  - The transaction failed, reverting all state changes and interrupting execution flow.                                                                    ║
  ║  - CU by node attribution confidence is 0.0% with 1 unmatched CU entries.                                                                                  ║
  ╚═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
"
`;

exports[`Terminal Output Snapshots > high-cu — bottleneck program 1`] = `
"
  OPEN INSIGHT [CLI v0.1.0]    MAINNET   SLOT: 1500400 
  ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
  │ SIGNATURE: 7uR8wF2kX3bL9tP1...8yC1tV7gN4eL5uH0   SUCCESS                                                                                                   │
  │                                                                                                                                                     │
  │ TRANSACTION FEE: 0.000100 SOL                                                                                                                              │
  ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ CU EXECUTION COST                                                                                                                                       │
  │                                                                                                                                                    │
  │  CU Consumed:   199.500 CU                                                                                                                                 │
  │  Priority Fee:  no priority fee                                                                                                                            │
  │  Fee:           0 lamports  ·  0.000000000 SOL  ·  USD N/A                                                                                                 │
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ TRANSFER BREAKDOWN                                                                                                                                      │
  │                                                                                                                                                    │
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────┬──────────────┬────────────────────┬──────────────────────────────────────────────┬──────────────┬────────┐
│ From         │ To           │ Amount             │ Token                                        │ USD          │ Spam?  │
├──────────────┼──────────────┼────────────────────┼──────────────────────────────────────────────┼──────────────┼────────┤
│ —            │ Fg6P...PZL7  │ 0,0001             │ SOL                                          │ N/A          │ no     │
└──────────────┴──────────────┴────────────────────┴──────────────────────────────────────────────┴──────────────┴────────┘

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ CPI CALL TREE                                                                                                                                           │
  │                                                                                                                                                    │
  │ ✓ 11111111111111111111111111111111 (199.500 CU) [BOTTLENECK]
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

   ACCOUNT CHANGES
┌────────────────────┬────────────┬───────────────┬────────────────────┐
│ Account            │ Role       │ SOL Δ         │ Token Δ            │
├────────────────────┼────────────┼───────────────┼────────────────────┤
│ 2zoF...e2dS        │ signer     │ -0.000100     │ —                  │
├────────────────────┼────────────┼───────────────┼────────────────────┤
│ Fg6P...PZL7        │ writable   │ +0.000100     │ —                  │
└────────────────────┴────────────┴───────────────┴────────────────────┘

  ╔═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
  ║ ACTIONABLE INSIGHTS                                                                                                                                        ║
  ║                                                                                                                                                    ║
  ║  - Unknown Program consumed 199.500 CUs (99.75% of total).                                                                                                 ║
  ║  - CU by node attribution confidence is 0.0% with 1 unmatched CU entries.                                                                                  ║
  ║  - Transaction used 99.8% of its CU limit, risking random failures.                                                                                        ║
  ╚═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
"
`;

exports[`Terminal Output Snapshots > mev-mix — multi-program with high-cu bottleneck 1`] = `
"
  OPEN INSIGHT [CLI v0.1.0]    MAINNET   SLOT: 1700000 
  ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
  │ SIGNATURE: mev-mix-fixture-...BBBBBBBBBBBBBBBB   SUCCESS                                                                                                   │
  │                                                                                                                                                     │
  │ TRANSACTION FEE: 0.000000 SOL                                                                                                                              │
  ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ CU EXECUTION COST                                                                                                                                       │
  │                                                                                                                                                    │
  │  CU Consumed:   195.000 CU                                                                                                                                 │
  │  Priority Fee:  no priority fee                                                                                                                            │
  │  Fee:           0 lamports  ·  0.000000000 SOL  ·  USD N/A                                                                                                 │
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ TRANSFER BREAKDOWN                                                                                                                                      │
  │                                                                                                                                                    │
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────┬──────────────┬────────────────────┬──────────────────────────────────────────────┬──────────────┬────────┐
│ From         │ To           │ Amount             │ Token                                        │ USD          │ Spam?  │
├──────────────┼──────────────┼────────────────────┼──────────────────────────────────────────────┼──────────────┼────────┤
│ Pool...1111  │ —            │ 0,05               │ SOL                                          │ N/A          │ no     │
└──────────────┴──────────────┴────────────────────┴──────────────────────────────────────────────┴──────────────┴────────┘

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ CPI CALL TREE                                                                                                                                           │
  │                                                                                                                                                    │
  │ ✓ JUP4Fb2cqiRUcaTHdrPC8h2gNsA2ETXiPDD33WcGuJB (195.000 CU) [BOTTLENECK]
  │ └── ✓ 9W959DqEETiGZocYWCQPaJ6sBmUzgfxXfqGeTEdp3aQP (180.000 CU)
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

   ACCOUNT CHANGES
┌────────────────────┬────────────┬───────────────┬────────────────────┐
│ Account            │ Role       │ SOL Δ         │ Token Δ            │
├────────────────────┼────────────┼───────────────┼────────────────────┤
│ MEVb...1111        │ signer     │ +0.050000     │ —                  │
├────────────────────┼────────────┼───────────────┼────────────────────┤
│ Pool...1111        │ writable   │ -0.050000     │ —                  │
└────────────────────┴────────────┴───────────────┴────────────────────┘

  ╔═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
  ║ ACTIONABLE INSIGHTS                                                                                                                                        ║
  ║                                                                                                                                                    ║
  ║  - Unknown Program consumed 195.000 CUs (97.5% of total).                                                                                                  ║
  ║  - CU by node attribution confidence is 50.0% with 1 unmatched CU entries.                                                                                 ║
  ║  - Transaction requested high limits but only used 195.000 CUs (51.2% waste).                                                                              ║
  ╚═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
"
`;

exports[`Terminal Output Snapshots > simple success — system program transfer 1`] = `
"
  OPEN INSIGHT [CLI v0.1.0]    DEVNET   SLOT: 1500000 
  ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
  │ SIGNATURE: 5mZ8H54EQcPgZFa3...JpM9rN9//example   SUCCESS                                                                                                   │
  │                                                                                                                                                     │
  │ TRANSACTION FEE: 0.000100 SOL                                                                                                                              │
  ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ CU EXECUTION COST                                                                                                                                       │
  │                                                                                                                                                    │
  │  CU Consumed:   120 CU                                                                                                                                     │
  │  Priority Fee:  no priority fee                                                                                                                            │
  │  Fee:           0 lamports  ·  0.000000000 SOL  ·  USD N/A                                                                                                 │
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ TRANSFER BREAKDOWN                                                                                                                                      │
  │                                                                                                                                                    │
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────┬──────────────┬────────────────────┬──────────────────────────────────────────────┬──────────────┬────────┐
│ From         │ To           │ Amount             │ Token                                        │ USD          │ Spam?  │
├──────────────┼──────────────┼────────────────────┼──────────────────────────────────────────────┼──────────────┼────────┤
│ —            │ Fg6P...PZL7  │ 0,0001             │ SOL                                          │ N/A          │ no     │
└──────────────┴──────────────┴────────────────────┴──────────────────────────────────────────────┴──────────────┴────────┘

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ CPI CALL TREE                                                                                                                                           │
  │                                                                                                                                                    │
  │ ✓ 11111111111111111111111111111111 (0 CU)
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

   ACCOUNT CHANGES
┌────────────────────┬────────────┬───────────────┬────────────────────┐
│ Account            │ Role       │ SOL Δ         │ Token Δ            │
├────────────────────┼────────────┼───────────────┼────────────────────┤
│ 2zoF...e2dS        │ signer     │ -0.000100     │ —                  │
├────────────────────┼────────────┼───────────────┼────────────────────┤
│ Fg6P...PZL7        │ writable   │ +0.000100     │ —                  │
└────────────────────┴────────────┴───────────────┴────────────────────┘

  ╔═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
  ║ ACTIONABLE INSIGHTS                                                                                                                                        ║
  ║                                                                                                                                                    ║
  ║  - CU by node attribution confidence is 0.0% with 0 unmatched CU entries.                                                                                  ║
  ╚═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
"
`;

exports[`Terminal Output Snapshots > spam — large transfer of unknown mint 1`] = `
"
  OPEN INSIGHT [CLI v0.1.0]    MAINNET   SLOT: 1600000 
  ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
  │ SIGNATURE: spam-suspect-fix...aaaaaaaaaaaaaaaa   SUCCESS                                                                                                   │
  │                                                                                                                                                     │
  │ TRANSACTION FEE: 0.000005 SOL                                                                                                                              │
  ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ CU EXECUTION COST                                                                                                                                       │
  │                                                                                                                                                    │
  │  CU Consumed:   4.500 CU                                                                                                                                   │
  │  Priority Fee:  no priority fee                                                                                                                            │
  │  Fee:           0 lamports  ·  0.000000000 SOL  ·  USD N/A                                                                                                 │
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ TRANSFER BREAKDOWN                                                                                                                                      │
  │                                                                                                                                                    │
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────┬──────────────┬────────────────────┬──────────────────────────────────────────────┬──────────────┬────────┐
│ From         │ To           │ Amount             │ Token                                        │ USD          │ Spam?  │
├──────────────┼──────────────┼────────────────────┼──────────────────────────────────────────────┼──────────────┼────────┤
│ —            │ Recv...1111  │ 5.000.000.000.000  │ SPAMmint...XXXXXX                            │ N/A          │ ⚠ YES  │
└──────────────┴──────────────┴────────────────────┴──────────────────────────────────────────────┴──────────────┴────────┘

  ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
  │ CPI CALL TREE                                                                                                                                           │
  │                                                                                                                                                    │
  │ ✓ TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA (4.500 CU) [BOTTLENECK]
  └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

   ACCOUNT CHANGES
┌────────────────────┬────────────┬───────────────┬────────────────────┐
│ Account            │ Role       │ SOL Δ         │ Token Δ            │
├────────────────────┼────────────┼───────────────┼────────────────────┤
│ Spam...1111        │ signer     │ -0.000005     │ 0 TOKEN            │
├────────────────────┼────────────┼───────────────┼────────────────────┤
│ Recv...1111        │ writable   │ 0             │ 0 TOKEN            │
└────────────────────┴────────────┴───────────────┴────────────────────┘

  ╔═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
  ║ ACTIONABLE INSIGHTS                                                                                                                                        ║
  ║                                                                                                                                                    ║
  ║ No optimization issues detected.                                                                                                                           ║
  ╚═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
"
`;
